updating one hot method

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
        "[4 rows x 22 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,6 +684,290 @@
     "# look at description to see cardinality\n",
     "under_X.describe()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### I'm going to be One Hot encoding to generate a sparse matrix to make finding\n",
+    "### probabilities easier\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tf1\n",
+      "b: 431\n",
+      "\n",
+      "c: 4\n",
+      "\n",
+      "f: 3039\n",
+      "\n",
+      "k: 810\n",
+      "\n",
+      "s: 29\n",
+      "\n",
+      "x: 3517\n",
+      "\n",
+      "\tf2\n",
+      "f: 2209\n",
+      "\n",
+      "g: 4\n",
+      "\n",
+      "s: 2476\n",
+      "\n",
+      "y: 3141\n",
+      "\n",
+      "\tf3\n",
+      "b: 166\n",
+      "\n",
+      "c: 41\n",
+      "\n",
+      "e: 1449\n",
+      "\n",
+      "g: 1776\n",
+      "\n",
+      "n: 2185\n",
+      "\n",
+      "p: 141\n",
+      "\n",
+      "r: 15\n",
+      "\n",
+      "u: 14\n",
+      "\n",
+      "w: 997\n",
+      "\n",
+      "y: 1046\n",
+      "\n",
+      "\tf4\n",
+      "f: 4643\n",
+      "\n",
+      "t: 3187\n",
+      "\n",
+      "\tf5\n",
+      "a: 372\n",
+      "\n",
+      "c: 192\n",
+      "\n",
+      "f: 2160\n",
+      "\n",
+      "l: 376\n",
+      "\n",
+      "m: 36\n",
+      "\n",
+      "n: 3287\n",
+      "\n",
+      "p: 255\n",
+      "\n",
+      "s: 576\n",
+      "\n",
+      "y: 576\n",
+      "\n",
+      "\tf6\n",
+      "a: 190\n",
+      "\n",
+      "f: 7640\n",
+      "\n",
+      "\tf7\n",
+      "c: 6598\n",
+      "\n",
+      "w: 1232\n",
+      "\n",
+      "\tf8\n",
+      "b: 5341\n",
+      "\n",
+      "n: 2489\n",
+      "\n",
+      "\tf9\n",
+      "b: 1728\n",
+      "\n",
+      "e: 89\n",
+      "\n",
+      "g: 736\n",
+      "\n",
+      "h: 714\n",
+      "\n",
+      "k: 387\n",
+      "\n",
+      "n: 981\n",
+      "\n",
+      "o: 56\n",
+      "\n",
+      "p: 1434\n",
+      "\n",
+      "r: 24\n",
+      "\n",
+      "u: 458\n",
+      "\n",
+      "w: 1140\n",
+      "\n",
+      "y: 83\n",
+      "\n",
+      "\tf10\n",
+      "e: 3406\n",
+      "\n",
+      "t: 4424\n",
+      "\n",
+      "\tf11\n",
+      "?: 2431\n",
+      "\n",
+      "b: 3639\n",
+      "\n",
+      "c: 522\n",
+      "\n",
+      "e: 1057\n",
+      "\n",
+      "r: 181\n",
+      "\n",
+      "\tf12\n",
+      "f: 517\n",
+      "\n",
+      "k: 2364\n",
+      "\n",
+      "s: 4926\n",
+      "\n",
+      "y: 23\n",
+      "\n",
+      "\tf13\n",
+      "f: 567\n",
+      "\n",
+      "k: 2298\n",
+      "\n",
+      "s: 4693\n",
+      "\n",
+      "y: 272\n",
+      "\n",
+      "\tf14\n",
+      "b: 432\n",
+      "\n",
+      "c: 36\n",
+      "\n",
+      "e: 90\n",
+      "\n",
+      "g: 527\n",
+      "\n",
+      "n: 447\n",
+      "\n",
+      "o: 172\n",
+      "\n",
+      "p: 1838\n",
+      "\n",
+      "w: 4280\n",
+      "\n",
+      "y: 8\n",
+      "\n",
+      "\tf15\n",
+      "b: 432\n",
+      "\n",
+      "c: 36\n",
+      "\n",
+      "e: 91\n",
+      "\n",
+      "g: 537\n",
+      "\n",
+      "n: 507\n",
+      "\n",
+      "o: 172\n",
+      "\n",
+      "p: 1822\n",
+      "\n",
+      "w: 4209\n",
+      "\n",
+      "y: 24\n",
+      "\n",
+      "\tf16\n",
+      "p: 7830\n",
+      "\n",
+      "\tf17\n",
+      "n: 88\n",
+      "\n",
+      "o: 84\n",
+      "\n",
+      "w: 7650\n",
+      "\n",
+      "y: 8\n",
+      "\n",
+      "\tf18\n",
+      "n: 36\n",
+      "\n",
+      "o: 7223\n",
+      "\n",
+      "t: 571\n",
+      "\n",
+      "\tf19\n",
+      "e: 2707\n",
+      "\n",
+      "f: 45\n",
+      "\n",
+      "l: 1296\n",
+      "\n",
+      "n: 36\n",
+      "\n",
+      "p: 3746\n",
+      "\n",
+      "\tf20\n",
+      "b: 43\n",
+      "\n",
+      "h: 1629\n",
+      "\n",
+      "k: 1764\n",
+      "\n",
+      "n: 1838\n",
+      "\n",
+      "o: 43\n",
+      "\n",
+      "r: 72\n",
+      "\n",
+      "u: 43\n",
+      "\n",
+      "w: 2355\n",
+      "\n",
+      "y: 43\n",
+      "\n",
+      "\tf21\n",
+      "a: 356\n",
+      "\n",
+      "c: 321\n",
+      "\n",
+      "n: 378\n",
+      "\n",
+      "s: 1188\n",
+      "\n",
+      "v: 3957\n",
+      "\n",
+      "y: 1630\n",
+      "\n",
+      "\tf22\n",
+      "d: 3014\n",
+      "\n",
+      "g: 2057\n",
+      "\n",
+      "l: 808\n",
+      "\n",
+      "m: 274\n",
+      "\n",
+      "p: 1137\n",
+      "\n",
+      "u: 359\n",
+      "\n",
+      "w: 181\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for feature in under_X.columns:\n",
+    "    d = pd.get_dummies(under_X[feature])\n",
+    "    print(\"\\t\" + feature)\n",
+    "    for col in d.columns:\n",
+    "        print(col + \": \" + str(sum(d[col])) + \"\\n\")"
    ]
   },
   {
